--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
     "axios": "^0.26.0",
     "express": "^4.17.2",
     "morgan": "^1.10.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/malikasinger1/ask-sdk-express-adapter-boilerplate.git"
+  },
+  "bugs": {
+    "url": "https://github.com/malikasinger1/ask-sdk-express-adapter-boilerplate/issues"
+  },
+  "homepage": "https://github.com/malikasinger1/ask-sdk-express-adapter-boilerplate#readme"
 }
