--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "ask-sdk-core": "^2.11.0",
     "ask-sdk-express-adapter": "^2.11.0",
     "axios": "^0.26.0",
-    "express": "^4.17.2",
-    "morgan": "^1.10.0"
+    "express": "^4.17.3",
+    "morgan": "^1.10.0",
+    "ngrok": "^4.3.1"
   },
   "repository": {
     "type": "git",
